Corrects typos etc in itgrund material
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1215 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/aims.tex
+++ b/labs/computer/aims.tex
@@ -1,2 +1,2 @@
-\item Redogöra för datorsystems uppbyggnad och funktion.
-\item Beskriva hur information representeras och lagras digitalt.
+\item redogöra för datorsystems uppbyggnad och funktion.
+\item beskriva hur information representeras och lagras digitalt.
