--- a/labs/install/literature.tex
+++ b/labs/install/literature.tex
@@ -11,12 +11,12 @@ dina beslut på förhand.
 När Ubuntu väl är installerat finns dokumentationen \citep{UbuntuDesktop} som 
 stöd för att börja använda systemet.
 Det kan vara bra att orientera sig i denna för senare enkelt hitta vid behov.
-Det rekommenderas att läsa igenom de första fem avsnitten -- \emph{Welcome to 
-Ubuntu 12.04} till och med \emph{Log out, power off, switch users} -- innan 
+Det rekommenderas att läsa igenom de första fem avsnitten -- ''Welcome to 
+Ubuntu'' till och med ''Log out, power off, switch users'' -- innan 
 installationen.
 Du ska även läsa om hur program installeras \citep[se Install additional 
 software]{UbuntuDesktop}.
 
 Om du använder Windows och vill testa att installera programmen även där finns 
 en instruktion för att installera \LaTeX\ för Windows \citep{Bosk2012lui}.
-Hur \LaTeX\ installeras under Ubuntu täcks senare i denna lydelse.
+Hur \LaTeX\ installeras under Ubuntu täcks senare i lydelsen.
