--- a/labs/python/python.tex
+++ b/labs/python/python.tex
@@ -37,22 +37,30 @@
 \label{sec:intro}
 Ett av de fundamentala områdena inom datatekniken är programmering, utan denna 
 vore datorer helt oanvändbara.
-Denna laboration behandlar grundläggande programmering, en kort introduktion 
+Denna laboration behandlar grundläggan\-de programmering, en kort introduktion 
 till detta enorma område.
 
 Programmeringsspråket som används i laborationen är Python.
 Detta är ett enkelt skriptspråk som är mycket populärt \cite{PythonWeb} och 
 effektivt avseende kodmängd och hastighet \cite{PythonWeb,Shootout}, enkelhet 
-att lära \cite{PythonWeb,grandell2006complicate}, öppenhet och tillgängligt på 
-en mängd olika plattformar \cite{PythonWeb}.
+att lära \cite{PythonWeb,grandell2006complicate}, öppet och tillgängligt på en 
+mängd olika plattformar \cite{PythonWeb}.
 
 
 \section{Syfte}
 \label{sec:aim}
-Syftet med denna laboration är följande:
+Syftet med denna laboration är att examinera att du kan:
 \begin{itemize}
   \input{aims.tex}
 \end{itemize}
+Detta görs genom att du får visa att du kan använda grundläggande 
+programmeringskonstruktioner;
+\begin{itemize}
+  \item variabler,
+  \item flödeskontrollstrukturer, och
+  \item iterationer;
+\end{itemize}
+och med dessa skriva enklare program för att behandla radbaserad textdata.
 
 
 \section{Läsanvisningar}
@@ -62,11 +70,10 @@ Syftet med denna laboration är följande:
 
 \section{Genomförande}
 \label{sec:work}
-När du har läst litteraturen, och förhoppningsvis även gjort några av 
-övningarna däri, och börjar känna dig bekant med materialet då är det dags att 
-ta itu med denna uppgift.
+När du har läst litteraturen, gjort några av övningarna däri och börjar känna 
+dig bekant med materialet, då är det dags att ta itu med denna uppgift.
 
-Det som ska åstadkommas är ett program för att hjälpa nätverksdriftstudenter 
+Det som ska åstadkommas är ett program för att hjälpa nätverksdriftstudent\-er 
 att repetera inför sina Cisco-prov.
 Programmet ska innehålla ett tiotal frågor med tillhörande svar.
 När det körs ska det ställa en slumpmässigt vald fråga till användaren, denne 
@@ -104,7 +111,7 @@ avsluta.
 \section{Examination}
 \label{sec:exam}
 Lämna in din källkod tillika programfil (.py-fil) i inlämningslådan 
-i lärplattformen.
+i lärplattform\-en för bedömning.
 
 
 \printbibliography
