--- a/literature.bib
+++ b/literature.bib
@@ -144,9 +144,9 @@
     Partl, Hubert and
     Hyna, Irene and
     Schlegl, Elisabeth},
-  title={The Not So Short Introduction to {\LaTeX2e}: or \LaTeX2e in 157 
+  title={The Not So Short Introduction to {\LaTeXe}: or {\LaTeXe} in 157 
     minutes},
-  URL={http://ctan.uib.no/info/lshort/english/lshort.pdf},
+  URL={http://www.ctan.org/tex-archive/info/lshort/english/lshort.pdf},
 }
 @misc{Honan2012haa,
 	author={Honan, Mat},
@@ -298,13 +298,13 @@
   title={Gnome - Debian Wiki},
   URL={http://wiki.debian.org/Gnome},
 }
-@unpublished{pythonkramaren1,
+@misc{pythonkramaren1,
   title={Pythonkramaren del 1: Programmering för teknologer},
   author={Henrik Eriksson},
   note={Kungliga Tekniska högskolan},
   URL={http://www.csc.kth.se/utbildning/kth/kurser/DD1344/grudat10/pythonkramaren1.pdf},
 }
-@unpublished{pythonkramaren2,
+@misc{pythonkramaren2,
   title={Pythonkramaren del 2: Datalogi för teknologer},
   author={Henrik Eriksson},
   note={Kungliga Tekniska högskolan},
