--- a/project/aims.tex
+++ b/project/aims.tex
@@ -1,6 +1,5 @@
 % $Id$
-\item Att fördjupa sig inom något delområde som tagits upp i kursen.
-\item Att öva på genomförandet en enklare objektiv undersökning och dra en 
-slutsats av resultatet.
-\item Att öva på att skriva en rapport och hålla en muntlig presentation av 
-densamma.
+\item genomföra en enklare objektiv undersökning och dra en slutsats av 
+resultatet.
+\item med akademisk svenska eller engelska skriva en rapport och hålla en 
+muntlig presentation av densamma.
