--- a/project/literature.tex
+++ b/project/literature.tex
@@ -2,5 +2,5 @@
 % Author:	Daniel Bosk <daniel.bosk@miun.se>
 Du ska ha läst igenom rapportmallen för tekniska rapporter 
 \citep{Bosk2012etr,MiUn2012rft}.
-Därutöver bör du ha läst kapitel 0--5, 6.1--6.4 och 9.1--9.2 i \emph{Computer 
-Science: and overview} \citep{Brookshear2012csa}.
+Därutöver bör du ha läst kapitel 0--5, 6.1--6.4 och 9.1--9.2 
+i \citetitle{Brookshear2012csa} \citep{Brookshear2012csa}.
