--- a/project/project.tex
+++ b/project/project.tex
@@ -48,7 +48,7 @@ för att formulera ytterligare resultat.
 
 \section{Syfte}
 \noindent
-Syftet med uppgiften är:
+Syftet med uppgiften är att examinera att studenten ska kunna:
 \begin{itemize}
   \input{aims.tex}
 \end{itemize}
@@ -66,12 +66,13 @@ heltidsarbete, eftersom att kursen läses på halvfart innebär detta strax öve
 fem veckors arbete om 20 timmar i veckan.
 Om du kommer direkt från gymnasiet kan du tänka dig att arbetet är något större 
 än projektarbetet som görs under den sista årskursen.
+Kraven på innehållet är dock något högre.
 
 När ett projekt genomförs och ska resultera i en rapport, vilket majoriteten av 
 projekt faktiskt gör, är det viktigt att rapporten inte blir en 
 efterhandskonstruktion.
-Projektet i denna kurs är därför indelad i fem uppgifter: introduktion, teori, 
-metod, resultat och analys, samt diskussion; en för respektive del i en 
+Projektet i denna kurs är därför indelad i fem deluppgifter: introduktion, 
+teori, metod, resultat och analys, samt diskussion; en för respektive del i en 
 klassisk akademisk rapport.
 
 \subsection{Introduktion}
@@ -244,9 +245,9 @@ kan besvaras ska ges.
 
 \section{Examination}
 
-Den färdiga rapporten tillsammans med källkod lämnas in i inlämningslådan 
-i lärplattformen.
-Omfattningen bör vara omkring (4) sidor tät text, utöver detta tillkommer 
+Den färdiga rapporten i PDF-format tillsammans med källkod lämnas in 
+i inlämningslådan i lärplattformen.
+Omfattningen bör vara omkring sju (7) sidor text, utöver detta tillkommer 
 titel, sammanfattning (abstract), innehållsförteckning och referenslista.
 Rapportens förstasida ska ha titel och författare med e-postadress\footnote{%
   Ett tips är att använda kommandot \texttt{\textbackslash footnote}.
