--- a/labs/terminal/aims.tex
+++ b/labs/terminal/aims.tex
@@ -1,8 +1,3 @@
 % $Id$
 % Author:	Daniel Bosk <daniel.bosk@miun.se>
-\item få en inblick i textbaserade användargränssnitt,
-\item se sambandet mellan vad som händer i det textbaserade och det
-	grafiska gränssnittet,
-\item få en förståelse för skillnaden mellan absoluta och relativa
-	sökvägar, samt
-\item få en ökad förståelse för hur filsystemet fungerar.
+\item använda programvaror i en UNIX-lik miljö.
