First draft of computer lab in itgrund
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1217 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/computer.tex
+++ b/labs/computer/computer.tex
@@ -37,8 +37,13 @@
 
 \section{Introduktion}
 \label{sec:Introduktion}
-\noindent
-\dots
+Datorn blir en allt viktigare del av samhällets infrastruktur.
+Det är idag få delar av samhället som skulle fungera utan datorkomponenter.
+Persondatorn är en relativt ny uppfinning, 1980-talet, den börjar nu ersättas 
+med en mer portabel persondator, smarttelefonen.
+Väldigt många har en smarttelefon i fickan idag, det är dock ytterst få som vet 
+hur de fungerar.
+Med denna uppgift ska du råda bot på detta.
 
 
 \section{Syfte}
@@ -54,20 +59,53 @@ projekt.
 
 \section{Läsanvisningar}
 \label{sec:Lasanvisningar}
-\noindent
 \input{literature.tex}
 
 
 \section{Genomförande}
 \label{sec:Genomforande}
-\noindent
-\dots
+Börja med att förbereda ett tomt dokument med LaTeX.
+Dokumentet ska ha titel, författare och datum.
+Det ska även finnas en innehållsförteckning, som för tillfället kommer att vara 
+tom.
+
+Texten du är på väg att skriva ska beskriva hur en dator fungerar, den ska 
+förklara allt som händer från att användaren trycker på strömbrytaren till att 
+denne loggar in på sin webbpost.
+Texten ska vara riktad till vardagsmänniskan som bara använder datorn och 
+smarttelefonen i vardagen, men den ska vara skriven på ett akademiskt sätt med 
+korrekt använd och förklarad terminologi.
+
+Nästa steg är att skapa en disposition.
+Skapa de avsnitt du tror att du behöver in din text, detta ger dig en överblick 
+över vad du anser viktigt att ta med.
+När du har en disposition du känner dig nöjd med kan du börja fylla avsnitten 
+med text och delavsnitt.
+Du är naturligtvis inte låst till din ursprungliga disposition, denna är bara 
+till för att hjälpa dig att strukturera dina tankar innan du börjar skriva.
+
+När du har ett första utkast av texten bör du först läsa igenom den själv en 
+gång, från början till slut.
+Därefter, när du gjort dina initiala åtgärder, lämnar du texten till någon, som 
+helst inte är insatt i området, och ber dem läsa den och kommentera den.
 
 
 \section{Examination}
 \label{sec:Examination}
-\noindent
-\dots
+Du lämnar in ditt dokument med tillhörande källkod i lärplattformen för 
+bedömning.
+Krav på dokumentet, utöver att du ska visa att du uppfyller målen 
+i \prettyref{sec:Syfte}, är följande:
+\begin{itemize}
+  \item Alla bilder ska vara figurer med tillhörande figurtexter.
+  \item Tabeller ska även de ha beskrivande texter.
+  \item Dokumentet ska ha en passande titel, författare, datum och 
+    innehållsförteckning.
+    Det ska inte finnas några sidbrytningar, likt denna lydelse.
+  \item Omfattningen ska vara omkring sex (6) sidor totalt.
+  \item Texten ska vara typsatt med LaTeX, dokumentklassen ska vara 
+    \emph{article}.
+\end{itemize}
 
 
 \printbibliography
